--- a/car/css/style.css
+++ b/car/css/style.css
@@ -17,7 +17,7 @@
   padding: 307px 0 235px 0;
   position: relative;
   background:
-    url("../img/dekor-bg-4.png") center / 100% 100% no-repeat,
+    url("../img/dekor-bg-4.webp") center / 100% 100% no-repeat,
     #1d353b;
 }
 
@@ -57,7 +57,7 @@
   position: absolute;
   bottom: 4px;
   left: 21px;
-  background: url("../img/dekor-3.png") 0 0 / cover no-repeat;
+  background: url("../img/dekor-3.webp") 0 0 / cover no-repeat;
 }
 
 .car-body-top__right {
@@ -92,7 +92,7 @@
   border: 6px solid #1b1818;
   border-bottom: none;
   background:
-    url("../img/profile-man.png") left bottom / contain no-repeat,
+    url("../img/profile-man.webp") left bottom / contain no-repeat,
     #a5d2e9;
   cursor: pointer;
 }
@@ -164,8 +164,8 @@
   right: 266px;
   border: 6px solid #1b1818;
   background:
-    url("../img/img-girl.png") left bottom / contain no-repeat,
-    url("../img/flowers.png") 69px 35px / 130px 130px no-repeat,
+    url("../img/img-girl.webp") left bottom / contain no-repeat,
+    url("../img/flowers.webp") 69px 35px / 130px 130px no-repeat,
     #a5d2e9;
   border-bottom: none;
   cursor: pointer;
@@ -227,7 +227,7 @@
   position: absolute;
   top: 0;
   right: 130px;
-  background: url("../img/motor.png") center / cover no-repeat;
+  background: url("../img/motor.webp") center / cover no-repeat;
 }
 
 .car-middle__trunk-inner:hover .trunk {
@@ -333,9 +333,9 @@
   top: -1px;
   left: 3px;
   background:
-    url("../img/dekor-1.png") 40px 70px / 100px 100px no-repeat,
-    url("../img/dekor-2.png") 260px 7px/ 80px 80px no-repeat,
-    url("../img/dekor-11.png") 30px 9px / 60px 40px no-repeat;
+    url("../img/dekor-1.webp") 40px 70px / 100px 100px no-repeat,
+    url("../img/dekor-2.webp") 260px 7px/ 80px 80px no-repeat,
+    url("../img/dekor-11.webp") 30px 9px / 60px 40px no-repeat;
 }
 
 .car-body-bottom__right {
@@ -358,9 +358,9 @@
   top: 0;
   right: 9px;
   background:
-    url("../img/dekor-7.png") 620px 0 / 120px 86px no-repeat,
-    url("../img/dekor-8.png") -16px -40px / 470px 300px no-repeat,
-    url("../img/dekor-9.png") 455px 15px / 40px 20px no-repeat;
+    url("../img/dekor-7.webp") 620px 0 / 120px 86px no-repeat,
+    url("../img/dekor-8.webp") -16px -40px / 470px 300px no-repeat,
+    url("../img/dekor-9.webp") 455px 15px / 40px 20px no-repeat;
 }
 
 .front-fender {
@@ -435,7 +435,7 @@
   position: absolute;
   bottom: 17px;
   right: 12px;
-  background: url("../img/dekor-4.png") 0 0 / cover no-repeat;
+  background: url("../img/dekor-4.webp") 0 0 / cover no-repeat;
   transform: scale(-1, 1);
 }
 
@@ -452,7 +452,7 @@
   position: absolute;
   bottom: 4px;
   right: 6px;
-  background: url("../img/dekor-5.png") 0 0 / cover no-repeat;
+  background: url("../img/dekor-5.webp") 0 0 / cover no-repeat;
   transform: scale(-1, 1);
 }
 
@@ -590,14 +590,14 @@
   backface-visibility: hidden;
   background-color: #1d34b8;
   background:
-    url("/img/dekor-12.png") center / cover no-repeat,
+    url("/img/dekor-12.webp") center / cover no-repeat,
     #1d34b8;
 }
 
 .fuel-cap__back {
   transform-origin: 100% 100%;
   background:
-    url("/img/dekor-6.png") center / 33px 33px no-repeat,
+    url("/img/dekor-6.webp") center / 33px 33px no-repeat,
     #1d34b8;
 }
 
@@ -659,7 +659,7 @@
   /* transition: all 0.8s; */
   /* transform-origin: 100% 100%; */
   /* outline: 3px solid #0e333d; */
-  /* background-image: url("../img/dekor-7.png"); */
+  /* background-image: url("../img/dekor-7.webp"); */
   /* background-position: center; */
   /* background-size: cover; */
   /* background-repeat: no-repeat; */
