--- a/car/css/style.css
+++ b/car/css/style.css
@@ -82,8 +82,6 @@
 }
 
 .window-driver-inner {
-  /* width: 196px;
-  height: 98px; */
   border-radius: 66% 34% 100% 0% / 0% 93% 0% 100%;
   background-color: transparent;
   position: absolute;
@@ -154,11 +152,9 @@
 }
 
 .window-passenger-inner {
-  /* width: 196px;
-  height: 98px; */
   background-color: #61c9e6;
   border-radius: 30px 0 0 0;
-  /* overflow: hidden; */
+
   position: absolute;
   bottom: 0;
   right: 266px;
@@ -203,8 +199,6 @@
   background-color: transparent;
   border-radius: 37px 30px 0 0;
   position: relative;
-  /* z-index: 1; */
-  /* overflow: hidden; */
 }
 
 .car-middle > *:not(:last-child) {
@@ -590,14 +584,14 @@
   backface-visibility: hidden;
   background-color: #1d34b8;
   background:
-    url("/img/dekor-12.webp") center / cover no-repeat,
+    url("../img/dekor-12.webp") center / cover no-repeat,
     #1d34b8;
 }
 
 .fuel-cap__back {
   transform-origin: 100% 100%;
   background:
-    url("/img/dekor-6.webp") center / 33px 33px no-repeat,
+    url("../img/dekor-6.webp") center / 33px 33px no-repeat,
     #1d34b8;
 }
 
@@ -607,15 +601,6 @@
 .fuel-cap__body:hover .fuel-cap__front {
   transform: rotateY(140deg);
 }
-
-/* .fuel-cap {
-  transform-origin: 100% 100%;
-  width: 100%;
-  height: 100%;
-  background-color: #1c33b7;
-  border-radius: 5px;
-  transition: all 0.8s;
-} */
 
 .fuel-cork {
   width: 44px;
@@ -630,11 +615,6 @@
   cursor: pointer;
 }
 
-.fuel-cork:hover::after {
-  /* transform: rotateY(140deg); */
-  /* backface-visibility: hidden; */
-}
-
 .fuel-cork::before {
   content: "";
   display: inline-block;
@@ -644,27 +624,6 @@
   top: 6px;
   background-color: #1b2a9f;
   border-radius: 50%;
-}
-
-.fuel-cork::after {
-  /* content: ""; */
-  /* width: 44px; */
-  /* height: 38px; */
-  /* display: inline-block; */
-  /* background-color: #1c33b7; */
-  /* border-radius: 5px; */
-  /* position: absolute; */
-  /* top: 0px; */
-  /* left: 0px; */
-  /* transition: all 0.8s; */
-  /* transform-origin: 100% 100%; */
-  /* outline: 3px solid #0e333d; */
-  /* background-image: url("../img/dekor-7.webp"); */
-  /* background-position: center; */
-  /* background-size: cover; */
-  /* background-repeat: no-repeat; */
-  /* transform: rotateY(0deg); */
-  /* backface-visibility: hidden; */
 }
 
 .wheel {
