--- a/car/css/fonts.css
+++ b/car/css/fonts.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=DM+Serif+Text:regular&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=DM+Serif+Text:regular&display=swap"); */
