--- a/test/css/reset.css
+++ b/test/css/reset.css
@@ -7,6 +7,11 @@
 	box-sizing: border-box;
 }
 
+*::before,
+*::after {
+	display: inline-block;
+}
+
 a {
 	text-decoration: none;
 	color: inherit;
@@ -31,4 +36,30 @@ html,
 body {
 	line-height: 1;
 	height: 100%;
+}
+
+/* FORM */
+input,
+button,
+textarea {
+	font-family: inherit;
+	font-size: inherit;
+	line-height: inherit;
+}
+button {
+	color: inherit;
+	background-color: transparent;
+}
+button,
+select,
+option {
+	cursor: pointer;
+}
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
