--- a/test/css/style.css
+++ b/test/css/style.css
@@ -5,341 +5,124 @@
 .wrapper {
   overflow: clip;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-body {
-  font-family: "Inter", sans-serif;
-  font-size: 18px;
-  color: #7d7d7d;
+.wrapper > main {
+  flex-grow: 1;
 }
 
 [class*="__container"] {
-  max-width: 1250px;
+  max-width: 1270px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
-.header--fix {
-  position: sticky;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 50;
-}
-
-.header::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0.95;
-}
-
-.header__inner {
-  position: relative;
-  z-index: 2;
-  padding: 30px 0;
-  font-size: 0;
-}
-
-.header__logo {
-  vertical-align: middle;
-  margin-right: 186px;
-}
-
-.header__menu {
-  margin-right: 35px;
-}
-
-.menu {
-  font-size: 18px;
-  color: #37393f;
-  display: inline-block;
-  line-height: 1.2;
-  vertical-align: middle;
-}
-
-.menu__item {
-  display: inline-block;
-  position: relative;
-  border-radius: 5px;
-  transition: all 0.3s;
-}
-
-.menu__item:not(:last-child) {
-  margin-right: 13px;
-}
-
-.menu__link {
-  padding: 10px;
-}
-
-.menu__link--icon {
-  position: relative;
-  padding-right: 27px;
-}
-
-.menu__link--icon::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 46%;
-  right: 10px;
-  width: 10px;
-  height: 7px;
-  background: url(../img/icon/arrow-menu.svg) center / cover no-repeat;
-  transition: all 0.3s;
-}
-
-.menu__item:hover .menu__link,
-.menu-level1__item:hover .menu-level1__link,
-.menu-level2__item:hover .menu-level2__link {
-  text-decoration: underline;
-}
-
-.menu__item:hover,
-.menu-level2__item:hover {
-  background-color: #40ddb6;
-}
-
-.menu-level1__item:hover {
-  background-color: #6b77e5;
-}
-
-.menu__item--icon:hover .menu__link--icon::after {
-  transform: rotate(-180deg);
-}
-
-.menu__item:hover .menu-level1,
-.menu-level1__item:hover .menu-level2 {
-  visibility: visible;
-}
-
-.btn {
-  display: inline-block;
-}
-
-.btn__link {
-  font-family: "Cabin", sans-serif;
+body {
+  font-family: "Causten", sans-serif;
+  font-size: 14px;
   color: #fff;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 1.2;
-  text-transform: capitalize;
-  padding: 21px 35px 22px 35px;
-  background-color: #6b77e5;
-  transition: all 0.3s;
 }
 
-.btn__link:hover {
-  background-color: #8f98eb;
-  border-radius: 10px;
-}
-
-.menu-level1 {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 150px;
-  padding-top: 5px;
-  visibility: hidden;
-  border-radius: 5px;
-}
-
-.menu-level1::before {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #40ddb6;
-  opacity: 0.5;
-  border-radius: 5px;
-}
-
-.menu-level1__item {
-  position: relative;
-  border-radius: 5px;
-}
-
-.menu-level1__item:not(:last-child) {
-  margin-bottom: 5px;
-}
-
-.menu-level1__item:hover .menu-level1__link::after {
-  transform: rotate(-90deg);
-}
-
-.menu-level1__link {
-  display: block;
-  font-size: 18px;
-  padding: 5px;
-}
-
-.menu-level1__link::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 46%;
-  right: 10px;
-  width: 10px;
-  height: 7px;
-  background: url(../img/icon/arrow-menu.svg) center / cover no-repeat;
-}
-
-.menu-level2 {
-  position: absolute;
-  top: 0;
-  left: 100%;
-  width: 150px;
-  visibility: hidden;
-  background-color: #6b77e5;
-  border-radius: 5px;
-}
-
-.menu-level2__item {
-  position: relative;
-  border-radius: 5px;
-}
-
-.menu-level2__item:not(:last-child) {
-  margin-bottom: 5px;
-}
-
-.menu-level2__link {
-  display: block;
-  font-size: 18px;
-  padding: 5px;
-}
-
-/* -----------------------Перший вариант картки-------------------------------- */
-
-.team {
-  padding: 150px 0;
-}
-
-.team__container {
-  font-size: 0;
-}
-
-.team__container > *:not(:last-child) {
-  margin-bottom: 31px;
-}
-
-.team__card:not(:last-child) {
-  margin-right: 31px;
-}
-
-.card-team {
-  display: inline-block;
-  max-width: 386px;
+.title-header {
+  font-family: "DM Serif Text", serif;
+  font-size: 55px;
+  color: #cecece;
   text-align: center;
-  position: relative;
+  padding: 40px 0;
+  text-shadow: 5px 6px 7px #0e333d;
+  line-height: 1.2;
+  box-shadow: inset 0px 0px 40px 40px rgba(150, 146, 146, 0.1);
 }
 
-.card-team::before {
-  content: "";
-  display: inline-block;
+.cards-top__items {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+
+.top-card {
+  padding: 56px 30px 56px 30px;
+  border-radius: 12px;
+  border: 1px solid #000;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  transition: all 0.3s;
+}
+
+@media (any-hover: hover) {
+  .top-card:hover {
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.4);
+  }
+}
+.top-card img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #6b77e5;
-  opacity: 0;
-  z-index: 1;
-  visibility: hidden;
-  transition: all 0.3s;
+  object-fit: cover;
+  object-position: top;
 }
 
-.card-team:hover .card-team__social {
-  visibility: visible;
-  opacity: 1;
-}
-
-.card-team:hover::before {
-  visibility: visible;
-  opacity: 0.7;
-}
-
-.card-team__image img {
-  width: 100%;
-}
-
-.card-team__social {
-  position: absolute;
-  top: 45%;
-  left: 28%;
-  visibility: hidden;
-  opacity: 0;
-  z-index: 2;
-}
-
-.social-card__link {
+.top-card__content {
+  max-width: 264px;
   position: relative;
-  border-radius: 50%;
-  overflow: clip;
 }
 
-.social-card__link::before {
-  content: "";
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  background-color: #40ddb6;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-
-.social-card__link:not(:last-child) {
-  margin-right: 13px;
-}
-
-.social-card__link:hover::before {
-  transform: scale(0.9);
-}
-
-.social-card__link img {
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  width: 25px;
-  height: 25px;
-  max-width: 100%;
-}
-
-.card-team__info {
-  max-width: 341px;
-  width: 100%;
-  position: absolute;
-  bottom: 22px;
-  left: 22px;
-  padding: 26px;
-  background-color: #fff;
-  z-index: 1;
-}
-
-.card-team__name {
-  color: #37393f;
-  font-family: "Poppins", sans-serif;
-  font-size: 25px;
-  font-weight: 600;
-  line-height: 1.2;
-}
-
-.card-team__info > *:not(:last-child) {
-  margin-bottom: 8px;
-}
-
-.card-team__post {
+.top-card__label {
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
-  line-height: 1.35;
+  font-weight: 800;
+  line-height: 1.67;
+  letter-spacing: 0.251px;
+  text-transform: capitalize;
 }
 
+.top-card__label:not(:last-child) {
+  margin-bottom: 24px;
+}
 
+.top-card__title {
+  font-family: "Core Sans C", sans-serif;
+  font-size: 34px;
+  font-weight: 800;
+  line-height: 1.33;
+  text-transform: capitalize;
+}
 
+.top-card__title:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.top-card__discount {
+  font-family: "Core Sans C", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.56;
+  letter-spacing: 0.251px;
+  text-transform: uppercase;
+}
+
+.top-card__discount:not(:last-child) {
+  margin-bottom: 42px;
+}
+
+.top-card__link {
+  font-family: "Core Sans C", sans-serif;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 1.5;
+  text-decoration-line: underline;
+  text-transform: capitalize;
+}
+
+.footer p {
+  text-align: center;
+  padding: 50px 0;
+  line-height: 1.2;
+  box-shadow: inset 0px 0px 40px 40px rgba(150, 146, 146, 0.1);
+}
