--- a/lesson_22/scss/style.scss
+++ b/lesson_22/scss/style.scss
@@ -100,12 +100,21 @@ body {
     padding-right: percent(116, 1920);
     padding-left: percent(116, 1920);
     position: relative;
-    @media (max-width: toEm(1920.98)) {
-    }
     @media (min-width: toEm(1921)) {
       flex-basis: percent(828, 1920);
       padding-left: 0;
       padding-right: toRem(116);
+    }
+    @media (max-width: toEm(870)) {
+      flex-basis: 100%;
+      justify-content: flex-start;
+    }
+    svg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      min-height: 100vh;
     }
     &::before {
       content: "";
@@ -114,8 +123,7 @@ body {
       top: 0;
       width: 100%;
       height: 100%;
-      background: url("/img/hero/hero-left-bg.svg") 0 0 / cover no-repeat;
-      backdrop-filter: blur(9.5px);
+      background-color: rgba(55, 57, 63, 0.91);
     }
   }
 
@@ -187,7 +195,7 @@ body {
       }
     }
     @media (max-width: toEm(500)) {
-      flex-basis: 100%;
+      flex-grow: 1;
     }
   }
 
@@ -196,6 +204,9 @@ body {
     display: flex;
     align-items: center;
     gap: toEm(10, 18);
+    @media (max-width: toEm(500)) {
+      justify-content: center;
+    }
   }
 
   &__icon-link {
@@ -227,6 +238,9 @@ body {
 
 .business-plan {
   display: flex;
+  @media (max-width: toEm(870)) {
+    flex-direction: column-reverse;
+  }
 
   &__box-left {
   }
@@ -244,15 +258,16 @@ body {
   flex-basis: percent(828, 1920);
   padding: toRem(145, 18) 0;
   padding-left: 15px;
+  padding-right: percent(68, 1920);
   @include adaptiveValue("padding-top", 145, 40, 0, 1250, 320);
   @include adaptiveValue("padding-bottom", 145, 40, 0, 1250, 320);
   background-color: #f4f4f4;
-  padding-right: percent(68, 1920);
   @media (min-width: toEm(1921)) {
-    // flex-basis: percent(828, 1920);
     padding-right: toRem(68);
   }
-  @media (max-width: toEm(1650)) {
+  @media (max-width: toEm(870)) {
+    justify-content: center;
+    padding-right: 15px;
   }
   &__img {
     aspect-ratio: 408/446;
@@ -269,16 +284,23 @@ body {
     flex-basis: toRem(408);
     display: flex;
     flex-direction: column;
+    @media (max-width: toEm(870)) {
+      flex-basis: toRem(588);
+    }
   }
 
   &__title {
     color: #37393f;
     font-family: "Poppins", sans-serif;
     font-size: toRem(30);
+    @include adaptiveValue("font-size", 30, 28, 0, 1920, 870);
     font-weight: 600;
     line-height: 1.21;
     text-transform: capitalize;
     @include margBottNotLast(toEm(13, 30));
+    @media (max-width: toEm(870)) {
+      @include adaptiveValue("font-size", 28, 20, 0, 870, 320);
+    }
   }
 
   &__text {
@@ -288,6 +310,9 @@ body {
     }
     p {
       line-height: 1.46;
+      @media (max-width: toEm(870)) {
+        @include adaptiveValue("font-size", 18, 16, 0, 870, 320);
+      }
     }
   }
 
@@ -308,20 +333,29 @@ body {
 .plan-right {
   display: flex;
   flex-basis: percent(1091, 1920);
-  padding: toRem(145, 18) 0;
-  padding-left: percent(68, 1920);
-  padding-right: 15px;
+  padding: toRem(145, 18) 15px toRem(145, 18) percent(68, 1920);
   @include adaptiveValue("padding-top", 145, 40, 0, 1250, 320);
   @include adaptiveValue("padding-bottom", 145, 40, 0, 1250, 320);
   @media (min-width: toEm(1921)) {
     padding-left: 68px;
   }
+  @media (max-width: toEm(870)) {
+    padding-left: 15px;
+  }
 
   &__content {
     flex-basis: toRem(673);
+    @media (max-width: toEm(870)) {
+      flex-basis: 100%;
+    }
   }
 
   &__sub-title {
+    @include adaptiveValue("font-size", 18, 16, 0, 870, 320);
+    color: #37393f;
+    font-weight: 500;
+    line-height: 1.2;
+    @include margBottNotLast(toEm(16, 18));
     &::before {
       content: "";
       top: toEm(5, 18);
@@ -329,13 +363,10 @@ body {
       height: toEm(12, 18);
       background-color: #40ddb6;
     }
-    color: #37393f;
-    font-weight: 500;
-    line-height: 1.2;
-    @include margBottNotLast(toEm(16, 18));
   }
 
   &__title {
+    @include adaptiveValue("font-size", 40, 28, 0, 870, 320);
     max-width: toEm(430, 40);
     @include margBottNotLast(toEm(20, 40));
   }
@@ -346,18 +377,29 @@ body {
     }
     @include margBottNotLast(toEm(20, 18));
     p {
+      @include adaptiveValue("font-size", 18, 16, 0, 870, 320);
       line-height: 1.46;
     }
   }
 
   &__strategy {
-    @include margBottNotLast(toEm(43, 18));
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 43, 30, 0, 870, 320);
+    }
   }
 
   &__item {
     display: flex;
     align-items: center;
     position: relative;
+    color: #37393f;
+    font-family: "Poppins", sans-serif;
+    font-size: toRem(20);
+    @include adaptiveValue("font-size", 20, 18, 0, 870, 320);
+    padding-left: toEm(35, 20);
+    min-height: toEm(33, 20);
+    line-height: 1.6;
+    @include margBottNotLast(toEm(23, 20));
     &::before {
       content: "";
       width: toEm(27, 20);
@@ -367,13 +409,6 @@ body {
       top: toEm(3, 20);
       background: url("../img/business-plan/strategy-icon.svg") center / cover no-repeat;
     }
-    color: #37393f;
-    font-family: "Poppins", sans-serif;
-    font-size: toRem(20);
-    padding-left: toEm(35, 20);
-    min-height: toEm(33, 20);
-    line-height: 1.2;
-    @include margBottNotLast(toEm(25, 20));
   }
 
   &__awards {
@@ -382,6 +417,12 @@ body {
     flex-wrap: wrap;
     @include margBottNotLast(toEm(37, 18));
     @media (max-width: toEm(1200)) {
+      flex-direction: column;
+    }
+    @media (max-width: toEm(870)) {
+      flex-direction: row;
+    }
+    @media (max-width: toEm(640.98)) {
       flex-direction: column;
     }
   }
@@ -404,6 +445,9 @@ body {
         color: #40ddb6;
       }
     }
+    @media (max-width: toEm(500)) {
+      width: 100%;
+    }
   }
 }
 
@@ -418,6 +462,18 @@ body {
       justify-content: center;
     }
   }
+  @media (max-width: toEm(870)) {
+    &.plan-right__item-awards {
+      max-width: toRem(295);
+    }
+  }
+  @media (max-width: toEm(640.98)) {
+    &.plan-right__item-awards {
+      max-width: 100%;
+      justify-content: center;
+    }
+  }
+
   img {
     width: toRem(42);
     height: toRem(42);
@@ -438,6 +494,7 @@ body {
     color: #37393f;
     font-family: "Poppins", sans-serif;
     font-size: toRem(20);
+    @include adaptiveValue("font-size", 20, 18, 0, 870, 320);
     font-weight: 600;
     line-height: 1.2;
     @include margBottNotLast(toEm(7, 20));
@@ -449,6 +506,7 @@ body {
     }
     p {
       font-size: toRem(16);
+      @include adaptiveValue("font-size", 16, 14, 0, 870, 320);
       line-height: 1.35;
     }
   }
@@ -456,10 +514,11 @@ body {
 
 .footer {
   p {
-    font-size: 30px;
+    font-size: toRem(30);
+    @include adaptiveValue("font-size", 30, 18, 0, 1920, 320);
     text-align: center;
-    padding: 50px 0;
+    padding: toEm(50, 30) 0;
     line-height: 1.2;
-    box-shadow: inset 0px 0px 40px 40px rgba(150, 146, 146, 0.1);
+    box-shadow: inset 0px 0px 40px 40px rgba(56, 56, 56, 0.1);
   }
 }
